[package]
name = "astrid-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP gateway for the Astrid admin API — translates HTTP requests into the daemon's IPC management surface."

[dependencies]
anyhow = { workspace = true }
astrid-audit = { workspace = true }
astrid-core = { workspace = true }
astrid-events = { workspace = true }
astrid-types = { workspace = true }
astrid-storage = { workspace = true }
astrid-uplink = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
