[package]
name = "astrid-ipc-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astrid daemon socket client — handshake + length-prefixed JSON IpcMessage I/O."

[dependencies]
anyhow = { workspace = true }
astrid-core = { workspace = true }
astrid-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
tracing = { workspace = true }

[lints]
workspace = true
