[package]
name = "astrid-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astrid micro-kernel, the core of the Astrid OS"

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
astrid-approval = { workspace = true }
astrid-audit = { workspace = true }
astrid-capabilities = { workspace = true }
astrid-capsule = { workspace = true }
astrid-capsule-install = { workspace = true }
astrid-config = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-events = { workspace = true }
astrid-mcp = { workspace = true }
astrid-storage = { workspace = true, features = ["kv"] }
astrid-vfs = { workspace = true }
base64 = { workspace = true }
# Used to build the `chrono::Duration` TTL passed to `CapabilityToken::create`
# in the admin token-mint handler (issue #929). The token API takes a signed
# chrono duration; `default-features = false` (workspace) is sufficient —
# `Duration::seconds` needs no clock feature.
chrono = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
# Metric recording facade. Connection-count, background-loop-tick, and
# event-bus-saturation counters record into the daemon-wide recorder the
# gateway exports; no exporter dependency here.
metrics = { workspace = true }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }

[lints]
workspace = true
