[package]
name = "astrid-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astrid micro-kernel, the core of the Astrid OS"

# Engine-agnostic (portable) dependencies. The kernel skeleton — struct,
# `with_resources` wiring, event bus, capability store, KV, dispatcher, audit —
# builds on these so an alternate host (e.g. a browser WebAssembly build) can
# reuse the kernel core without the native Wasmtime engine. Native-only deps
# (the WASM loader's MCP client, the cap-std VFS, and the disk install
# machinery) live in the target table below and are gated out on
# `wasm32-unknown-unknown`.
[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
astrid-approval = { workspace = true }
astrid-audit = { workspace = true }
astrid-capabilities = { workspace = true }
astrid-capsule = { workspace = true }
astrid-capsule-types = { workspace = true }
astrid-config = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-events = { workspace = true }
astrid-runtime = { workspace = true }
astrid-storage = { workspace = true, features = ["kv"] }
base64 = { workspace = true }
# Used to build the `chrono::Duration` TTL passed to `CapabilityToken::create`
# in the admin token-mint handler (issue #929). The token API takes a signed
# chrono duration; `default-features = false` (workspace) is sufficient —
# `Duration::seconds` needs no clock feature.
chrono = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
# Metric recording facade. Connection-count, background-loop-tick, and
# event-bus-saturation counters record into the daemon-wide recorder the
# gateway exports; no exporter dependency here.
metrics = { workspace = true }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
tempfile = { workspace = true }
# Base tokio: the wasm-clean subset (mirrors the astrid-capsule base). The
# native arm unions in `full` + `signal` via the target table below; `net`
# (Unix socket), `rt-multi-thread` (`block_in_place`), `fs`, and `process`
# only exist on that arm.
tokio = { workspace = true, features = ["sync", "macros", "time", "rt", "io-util"] }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Native-only dependencies: the MCP client (WASM engine host fn), the cap-std
# VFS + overlay registry, and the disk-backed capsule install machinery. Gated
# out of the `wasm32-unknown-unknown` browser host profile, which supplies its
# own execution engine, VFS, and install path.
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
astrid-capsule-install = { workspace = true }
astrid-mcp = { workspace = true }
astrid-vfs = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }

[dev-dependencies]
async-trait = { workspace = true }

[lints]
workspace = true
