[package]
name = "astrid-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared data types for the Astrid secure agent runtime — IPC payloads, LLM schemas, and kernel API types"

[features]
# Default OFF so the crate compiles on `wasm32-unknown-unknown` for
# capsule SDK consumption (chrono's `clock` would pull `wasm-bindgen`).
# Kernel-side consumers (`astrid-events`, the daemon) enable it via
# their own dep declaration to get `IpcMessage::new()` and the
# `#[serde(default = "Utc::now")]` field defaults.
default = []
clock = ["chrono/clock"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
