[package]
name = "astrid-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared data types for the Astrid secure agent runtime — IPC payloads, LLM schemas, and kernel API types"

[features]
# Default OFF so the crate compiles on `wasm32-unknown-unknown` for
# capsule SDK consumption (chrono's `clock` would pull `wasm-bindgen`).
# Kernel-side consumers (`astrid-events`, the daemon) enable it via
# their own dep declaration to get `IpcMessage::new()` and the
# `#[serde(default = "Utc::now")]` field defaults.
default = []
clock = ["chrono/clock"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# uuid's `rng-getrandom` feature pulls getrandom 0.4, which refuses to build
# for wasm32-unknown-unknown unless its `wasm_js` backend is enabled. This
# entry turns that backend on for wasm targets only (browser host profile
# groundwork); native builds are unaffected. Requires the build to be run with
# RUSTFLAGS='--cfg getrandom_backend="wasm_js"' (see scripts/check-wasm-portability.sh).
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
