[package]
name = "astrid-uplink"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared uplink client (local-transport handshake + admin IPC correlation) used by the CLI and the HTTP gateway."

[features]
default = []
test-support = []

[dependencies]
anyhow = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `net`: host-local/TCP client transport; native-only, not in the tokio base.
tokio = { workspace = true, features = ["net"] }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
